--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,19 @@
-cmake_minimum_required(VERSION 3.23)
-project(The_Maze)
+cmake_minimum_required(VERSION 3.0)
+project(The Maze)
 
-set(CMAKE_C_STANDARD 17)
+set(SDL2_INCLUDE_DIR "E:/Coding/SDL2/include")
+set(SDL2_LIB_DIR "E:/Coding/SDL2/lib")
+
+# Find SDL2
 find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
-add_executable(The_Maze main.c)
+
+include_directories(${SDL2_INCLUDE_DIR})
+
+# Add your source files
+set(SOURCES maze.c)
+
+# Create the executable
+add_executable(The_Maze ${SOURCES})
+
+# Link SDL2 libraries
 target_link_libraries(The_Maze ${SDL2_LIBRARIES})
